<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.server.cameraapp.MainActivity">

    <LinearLayout
        android:id="@+id/linear_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/ivMain"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher"

            android:adjustViewBounds="true"
            android:maxWidth="42dp"
            android:maxHeight="42dp"
            android:scaleType="fitXY"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:weightSum="2">
            <TextView
                android:text="@string/text_datePlaceHolder"
                android:id="@+id/text_imgDate"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:text="@string/text_locationPlaceHolder"
                android:id="@+id/text_imgLocation"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/text_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/text_captionPlaceHolder"
        android:textAlignment="center" />

    <LinearLayout
        android:id="@+id/linear_caption_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_caption"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/entry_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/text_captionHint" />

        <Button
            android:id="@+id/btnCaption"
            android:text="@string/btn_captionUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <Button
        android:id="@+id/btnLeft"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="75dp"
        android:layout_marginStart="10dp"
        android:text="@string/btn_left" />


    <Button
        android:id="@+id/btnRight"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_right"
        android:layout_alignBaseline="@+id/btnLeft"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="7"
        android:orientation="horizontal"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp">
        <Button
            android:id="@+id/btnSnap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_snap"
            android:onClick="takePicture"
            android:layout_marginBottom="29dp"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@android:color/transparent"/>

        <Button
            android:id="@+id/btnFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_filter"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>
